fix(content) : shift selection & reload syncing appData with action UI

--- a/src/action/components/general/css/Section.module.css
+++ b/src/action/components/general/css/Section.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 0.5rem;
-    margin: 0.5rem 0 0.5rem 0;
+    margin: 1rem 0;
 }
 
 .sectionChildren {
